--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cs4550?serverTimezone=UTC
-spring.datasource.username=mnagras
-spring.datasource.password=Emerald$0323
+spring.datasource.url=jdbc:mysql://${DBHOSTNAME}/${DBSCHEMA}?serverTimezone=UTC
+spring.datasource.username=${DBUSERNAME}
+spring.datasource.password=${DBPASSWORD}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
