--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://${DBHOSTNAME}/${DBSCHEMA}?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${DBHOSTNAME}/${DBSCHEMA}?serverTimezone=UTC&useLegacyDatetimeCode=false&zerodatetimebehavior=Converttonull
 spring.datasource.username=${DBUSERNAME}
 spring.datasource.password=${DBPASSWORD}
 spring.jpa.hibernate.ddl-auto=none
